--- a/index.css
+++ b/index.css
@@ -12,6 +12,25 @@ body {
     margin: 0;
     background: #484848;
 }
+/* This is the arrow -------------------------------------------------------------------------------------- */
+
+.circle {
+    width: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 14%;
+    border-radius: 100%;
+    animation-name: textcomein;
+    animation-duration: 4s;
+}
+
+.arrow {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    animation: upanddown 1s 4s infinite, fade 20s;
+}
 
 /* This is the title --------------------------------------------------------------------------------------- */
 
@@ -19,6 +38,7 @@ body {
     width: 100%;
     text-align: center;
     color: #FF4321;
+    animation: textcomein 3s;
 }
 
 .title {
@@ -37,7 +57,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 20%;
+    margin-top: 15%;
 }
 
 .about {
@@ -54,6 +74,36 @@ body {
     color: #FF4321;
     text-align: center;
 }
+/* This are my skills --------------------------------------------------------------------------------------- */
+
+.skills {
+    max-width: 68.75rem;
+    margin: auto;
+    text-align: center;
+    margin-top: 15%;
+  }
+  
+  .skill-header {
+    margin-bottom: 1rem;
+    color: #FF4321;
+  }
+  
+  .skills-wrapper img {
+    padding: 1.25rem;
+  }
+  
+  .icon {
+    width: 11.875rem;
+    height: 11.25rem;
+  }
+
+  .icon-card {
+    background-color: #504848;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px #504848;
+    padding: 20px;
+    margin: 10px;
+  }
 
 /* This are the projects ------------------------------------------------------------------------------------ */
 
@@ -69,6 +119,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    transition: 2s ease 1ms;
 }
 
 .container {
@@ -90,10 +141,32 @@ body {
     color: #FF4321;
     text-align: center;
     margin-bottom: 3%;
-    margin-top: 20%;
+    margin-top: 15%;
 }
 
-.test {
+.description {
     text-align: center;
     color: #FF4321;
+}
+
+/* Animations ---------------------------------------------------------------------------------------------------------------------- */
+
+@keyframes textcomein {
+    from {transform: translateX(-1500px); opacity: 0;}
+    to {transform: translateX(0); opacity: 1;}
+}
+
+@keyframes upanddown {
+    0% {transform: translateY(0);}
+    50% {transform: translateY(5px);}
+    100% {transform: translateY(0);}
+}
+
+@keyframes fade {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.laptop:hover {
+    transform: scale(1.3);
 }
